Removed unnecessary inserts in login form. Added initializing sql queries.

--- a/BD_Projekt/BD_Projekt.csproj
+++ b/BD_Projekt/BD_Projekt.csproj
@@ -244,6 +244,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="databaseInit.sql" />
     <Content Include="Model.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>Model.Context.cs</LastGenOutput>
