--- a/BD_Projekt/BD_Projekt.csproj
+++ b/BD_Projekt/BD_Projekt.csproj
@@ -11,6 +11,21 @@
     <AssemblyName>BD_Projekt</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -62,11 +77,17 @@
     <Compile Include="Document.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
-    <Compile Include="Forms\EditSkillForm.cs">
+    <Compile Include="Forms\ChangeJobNameForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\EditSkillForm.Designer.cs">
-      <DependentUpon>EditSkillForm.cs</DependentUpon>
+    <Compile Include="Forms\ChangeJobNameForm.Designer.cs">
+      <DependentUpon>ChangeJobNameForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\EditSkillWeightPanel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\EditSkillWeightPanel.Designer.cs">
+      <DependentUpon>EditSkillWeightPanel.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\JobAdministrationPanel.cs">
       <SubType>Form</SubType>
@@ -111,6 +132,7 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
+    <Compile Include="ModelPartials.cs" />
     <Compile Include="Posesses.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
@@ -186,8 +208,11 @@
     <Compile Include="Worker.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Forms\EditSkillForm.resx">
-      <DependentUpon>EditSkillForm.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\ChangeJobNameForm.resx">
+      <DependentUpon>ChangeJobNameForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\EditSkillWeightPanel.resx">
+      <DependentUpon>EditSkillWeightPanel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\JobAdministrationPanel.resx">
       <DependentUpon>JobAdministrationPanel.cs</DependentUpon>
@@ -268,6 +293,18 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.5">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.5 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
