--- a/BD_Projekt/BD_Projekt.csproj
+++ b/BD_Projekt/BD_Projekt.csproj
@@ -182,11 +182,11 @@
     <Compile Include="Forms\AdminPanel.Designer.cs">
       <DependentUpon>AdminPanel.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\NewUserPanel.cs">
+    <Compile Include="Forms\UserAdministrationPanel.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\NewUserPanel.Designer.cs">
-      <DependentUpon>NewUserPanel.cs</DependentUpon>
+    <Compile Include="Forms\UserAdministrationPanel.Designer.cs">
+      <DependentUpon>UserAdministrationPanel.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\JobRequirementsPanel.cs">
       <SubType>Form</SubType>
@@ -241,8 +241,8 @@
     <EmbeddedResource Include="Forms\AdminPanel.resx">
       <DependentUpon>AdminPanel.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\NewUserPanel.resx">
-      <DependentUpon>NewUserPanel.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\UserAdministrationPanel.resx">
+      <DependentUpon>UserAdministrationPanel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\JobRequirementsPanel.resx">
       <DependentUpon>JobRequirementsPanel.cs</DependentUpon>
@@ -305,6 +305,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
