--- a/BD_Projekt/BD_Projekt.csproj
+++ b/BD_Projekt/BD_Projekt.csproj
@@ -55,7 +55,9 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="System" />
+    <Reference Include="System">
+      <HintPath>..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.5\System.dll</HintPath>
+    </Reference>
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices" />
@@ -74,6 +76,12 @@
     <Compile Include="Application.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="Approval.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Decision.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="Document.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
@@ -88,6 +96,24 @@
     </Compile>
     <Compile Include="Forms\EditSkillWeightPanel.Designer.cs">
       <DependentUpon>EditSkillWeightPanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\ApplicationPreviewForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ApplicationPreviewForm.Designer.cs">
+      <DependentUpon>ApplicationPreviewForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\DecisionPreviewForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\DecisionPreviewForm.Designer.cs">
+      <DependentUpon>DecisionPreviewForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\RefreshableForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\RefreshableForm.Designer.cs">
+      <DependentUpon>RefreshableForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\JobAdministrationPanel.cs">
       <SubType>Form</SubType>
@@ -208,8 +234,14 @@
     <Compile Include="Worker.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Forms\ApplicationPreviewForm.resx">
+      <DependentUpon>ApplicationPreviewForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\ChangeJobNameForm.resx">
       <DependentUpon>ChangeJobNameForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\DecisionPreviewForm.resx">
+      <DependentUpon>DecisionPreviewForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\EditSkillWeightPanel.resx">
       <DependentUpon>EditSkillWeightPanel.cs</DependentUpon>
@@ -279,6 +311,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="databaseInit.sql" />
+    <Content Include="insertApplication.sql" />
     <Content Include="Model.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>Model.Context.cs</LastGenOutput>
