--- a/BD_Projekt/App.config
+++ b/BD_Projekt/App.config
@@ -18,10 +18,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="ModelContainer" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string='data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=&quot;C:\Users\Rafal\Desktop\BD_Projekt\database.mdf&quot;;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework'"
+    <add name="ModelContainer" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string='data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=&quot;D:\Dokumenty\Visual Studio 2015\Databases\model.mdf&quot;;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework'"
       providerName="System.Data.EntityClient" />
-    <add name="BD_Projekt.Properties.Settings.databaseConnectionString"
-      connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Rafal\Desktop\BD_Projekt\database.mdf;Integrated Security=True;Connect Timeout=30"
-      providerName="System.Data.SqlClient" />
+    <add name="BD_Projekt.Properties.Settings.ModelContainer" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string='data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=&quot;D:\Dokumenty\Visual Studio 2015\Databases\database.mdf&quot;;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework'" />
   </connectionStrings>
 </configuration>
