Model changes. Role is now identified by const ID. Fixed LoginForm and UsersAdministrationPanel.

--- a/BD_Projekt/BD_Projekt.csproj
+++ b/BD_Projekt/BD_Projekt.csproj
@@ -177,6 +177,9 @@
     <Compile Include="Posesses.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="ProfessionalExperience.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="Recruited.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
