Modifications after changes the database
-GUI
-user search and add information
-boxes to add job history

--- a/BD_Projekt/App.config
+++ b/BD_Projekt/App.config
@@ -18,16 +18,17 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-<<<<<<< HEAD
+
     <add name="ModelContainer" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string='data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=&quot;C:\Users\DawidN\Documents\GitHub\BD_Projekt\database.mdf&quot;;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework'"
       providerName="System.Data.EntityClient" />
     <add name="BD_Projekt.Properties.Settings.databaseConnectionString"
       connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\DawidN\Documents\GitHub\BD_Projekt\database.mdf;Integrated Security=True;Connect Timeout=30"
       providerName="System.Data.SqlClient" />
-=======
-    <add name="ModelContainer" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string='data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=&quot;C:\Users\Rames\Projects\Visual Studio\BD\BD_Projekt\database.mdf&quot;;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework'"
+
+    <add name="ModelContainer" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string='data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=&quot;C:\Users\DawidN\Documents\GitHub\BD_Projekt\database.mdf&quot;;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework'"
       providerName="System.Data.EntityClient" />
-    <add name="BD_Projekt.Properties.Settings.ModelContainer" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string='data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=&quot;C:\Users\Rames\Projects\Visual Studio\BD\BD_Projekt\database.mdf&quot;;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework'" />
->>>>>>> refs/remotes/origin/master
+    <add name="BD_Projekt.Properties.Settings.ModelContainer" 
+      connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string='data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=&quot;C:\Users\DawidN\Documents\GitHub\BD_Projekt\database.mdf&quot;;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework'" />
+
   </connectionStrings>
 </configuration>
