--- a/BD_Projekt/BD_Projekt.csproj
+++ b/BD_Projekt/BD_Projekt.csproj
@@ -107,6 +107,12 @@
     <Compile Include="Education.cs">
       <DependentUpon>DataModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Assistant\RecruitedPreviewForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Assistant\RecruitedPreviewForm.Designer.cs">
+      <DependentUpon>RecruitedPreviewForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Supervisor\AcceptedList.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -311,6 +317,9 @@
     <Compile Include="Worker.cs">
       <DependentUpon>DataModel.tt</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Forms\Assistant\RecruitedPreviewForm.resx">
+      <DependentUpon>RecruitedPreviewForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Supervisor\AcceptedList.resx">
       <DependentUpon>AcceptedList.cs</DependentUpon>
     </EmbeddedResource>
